--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -12,7 +12,7 @@
 <link rel="icon" href="{{ "favicon.ico" | relURL }}">
 
 <!-- Link to CSS files -->
-<!-- <link rel="stylesheet" href="{{ "css/main.css" | relURL }}"> -->
+<link rel="stylesheet" href="{{ "css/style.css" | relURL }}">
 
 <!-- Any additional custom CSS or external stylesheets -->
 {{ block "head" . }}{{ end }}
